apps/finance/actual-budget/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: actualbudget-headers
  namespace: actualbudget
spec:
  headers:
    customResponseHeaders:
      Cross-Origin-Opener-Policy: "same-origin"
      Cross-Origin-Embedder-Policy: "require-corp"
