apps/finance/actual-budget/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: http
  hostnames:
    - budget.beeslab.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: actualbudget
          port: 5006
